# kubeprovision

./: .gitignore  Cargo.toml  Makefile.toml  README.md
config/: example.yaml
src/: cli.rs  config.rs  lib.rs  main.rs  node.rs  operator.rs  provision.rs  ssh.rs
src/cli/: exec.rs  node_state.rs  provision.rs  status.rs
src/config/: aws.rs  provider.rs
src/node/: ec2.rs
src/operator/: aws.rs
src/provision/: provisioner.rs  remote_command.rs
src/usecase/: ec2.rs
